--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,8 @@ body {
 .auth-nav .link,
 address .link {
     color: var(--primary-text-color);
+
+    font-style: normal;
     text-decoration: none;
 }
 
